# phoenix-website

./: CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/actions/build-vite/: action.yml
.github/actions/teams-notification/: action.yml
.github/workflows/: ci.yml  deploy-phoenixvc-web.yml  deploy.yml  production_deployment.yml
api/: package.json
api/sendContactEmail/: index.js
apps/api/: package.json
apps/design-system/: package.json
apps/design-system/src/: advanced-interaction.html  enhanced-system.html
apps/web/: package.json  playwright.config.ts  vite.config.js  vite.config.ts
apps/web/public/: staticwebapp.config.json
apps/web/src/: main.tsx
apps/web/src/constants/: portfolioData.ts
apps/web/src/features/error/: ErrorBoundary.tsx
apps/web/src/features/hero/: index.ts
apps/web/src/features/hero/animations/: index.ts
apps/web/src/features/portfolio/: Portfolio.module.css  ProjectDetail.tsx  index.tsx  projectIcons.tsx
apps/web/src/features/sidebar/: index.ts
apps/web/src/features/sidebar/components/: Sidebar.tsx
apps/web/src/features/sidebar/constants/: sidebar.constants.tsx
apps/web/src/pages/: cosmic-demo.tsx
apps/web/src/theme/constants/tokens/: theme-constants.ts
apps/web/src/theme/hooks/: useTheme.ts
apps/web/src/theme/mappings/: component-mappings.ts
apps/web/src/theme/providers/: theme-variables.tsx
apps/web/src/theme/validation/: storage-validation.ts  theme-initial-validation.ts
apps/web/src/utils/: chunkErrorRecovery.ts  logger.ts
docs/: tech_stack.md
(+15 files in other folders)
