[tool.poetry]
name = "phoenixvc-modernized"
version = "0.1.0"
description = "Documentation for Phoenix VC"
authors = ["JustAGhosT <smit.jurie@gmail.com>"]
license = "Proprietary"
readme = "README.md"
package-mode = false
packages = [
      { include = "docs" }
  ]

[tool.poetry.dependencies]
python = ">=3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.4"
mkdocs-autorefs = "^1.3.1"
mkdocs-git-authors-plugin = "^0.9.2"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"
mkdocs-section-index = "^0.3.8"
mkdocs-awesome-pages-plugin = "^2.9.2"
cairosvg = "^2.7.1"
Pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docs = "docs.scripts.serve_docs:main"
# Alternative docs command using mkdocs directly
# If you want to use this instead, comment out the line above and uncomment this one
# docs = "mkdocs:serve --config-file ./docs/mkdocs.yml"

[tool.ruff]
line-length = 88  # Same as black
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
